fix hero spacing

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1, h2, h3 {
     text-align: center;
     font-size: 2.5em;
     color: #646464;
-    padding: 35px;
+    padding: 15px;
 }
 
 nav {
@@ -95,7 +95,6 @@ nav ul li {
 
 header div * {
     color: #fff;
-    padding: 15px;
 }
 
 header div {    
@@ -127,7 +126,9 @@ header div h2 {
 }
 
 .sub {
-    background-color: rgba(0, 0, 0, 0.5);  
+    background-color: rgba(0, 0, 0, 0.5); 
+    padding: 5px; 
+    margin-bottom: 25px;
 }
 
 header button {
@@ -190,7 +191,7 @@ a:hover.brand-color{
 }
 
 .article p {
-    padding-top: 20px;
+    padding-bottom: 20px;
 
 }
 
@@ -245,6 +246,11 @@ footer a {
         padding: 10px;
     }
 
+    header div h1 {
+    font-size: 4em;
+    }
+
+
     div.images {
     flex-direction: row;
     justify-content: space-between;
@@ -271,9 +277,6 @@ footer a {
         max-width: 50%;
     }
 
-    
-
-}
 
 @media all and (min-width: 1140px){
     .container {
